--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <!-- Using the Video for Everybody Embed Code http://camendesign.com/code/video_for_everybody -->
         <video id="video" class="video-js" width="640" height="264" poster="http://zencoder-demo.s3.amazonaws.com/poster.jpg" autobuffer>
           <source src="http://video-js.s3.amazonaws.com/oceans-clip.mp4" type="video/mp4"></source>
-          <source src="http://video-js.s3.amazonaws.com/oceans-clip.ogg" type="video/ogg"></source>
           <source src="http://video-js.s3.amazonaws.com/oceans-clip.webm" type="video/webm"></source>
+          <source src="http://video-js.s3.amazonaws.com/oceans-clip.ogg" type="video/ogg"></source>
           <object width="640" height="264" type="application/x-shockwave-flash"
             data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf">
             <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
@@ -68,6 +68,7 @@
             <li>Consistent look between browsers</li>
             <li>Full Window Mode</li>
             <li>Volume Control</li>
+            <li>Fallback to <a href="http://flowplayer.org/">Flowplayer</a></li>
             <li></li>
           </ul>
         </div>
