--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
 
       <div class="video-box">
         <!-- Using the Video for Everybody Embed Code http://camendesign.com/code/video_for_everybody -->
-        <video id="video" class="video-js" width="640" height="264" poster="http://zencoder-demo.s3.amazonaws.com/poster.jpg" autobuffer>
-          <source src="http://video-js.s3.amazonaws.com/oceans-clip.mp4" type="video/mp4"></source>
+        <video id="video" class="video-js" width="640" height="264" poster="http://video-js.s3.amazonaws.com/oceans-clip.png" autobuffer>
           <source src="http://video-js.s3.amazonaws.com/oceans-clip.webm" type="video/webm"></source>
+          <source src="http://video-js.s3.amazonaws.com/oceans-clip.mp4" type="video/mp4">
           <source src="http://video-js.s3.amazonaws.com/oceans-clip.ogg" type="video/ogg"></source>
           <object width="640" height="264" type="application/x-shockwave-flash"
             data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf">
             <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
             <param name="allowfullscreen" value="true" />
             <param name="flashvars" value='config={"clip":"http://video-js.s3.amazonaws.com/oceans-clip.mp4"}' />
-            <img src="http://zencoder-demo.s3.amazonaws.com/poster.jpg" width="640" height="264" alt="Poster Image" title="No video playback capabilities." />
+            <img src="http://video-js.s3.amazonaws.com/oceans-clip.png" width="640" height="264" alt="Poster Image" title="No video playback capabilities." />
           </object>
         </video>
       </div>
