--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
       <h1>Video JS</h1>
       <p class="tagline">Open Source HTML5 Video Player</p>
 
+
       <div class="video-box">
-        <!-- Using the Video for Everybody Embed Code http://camendesign.com/code/video_for_everybody -->
+        <!-- Using the Video for Everybody Embed Code (modified for VP8/WebM) http://camendesign.com/code/video_for_everybody -->
         <video id="video" class="video-js" width="640" height="264" poster="http://video-js.s3.amazonaws.com/oceans-clip.png" autobuffer>
-          <source src="http://video-js.s3.amazonaws.com/oceans-clip.mp4" type="video/mp4">
-          <source src="http://video-js.s3.amazonaws.com/oceans-clip.ogg" type="video/ogg"></source>
+          <source src="http://video-js.s3.amazonaws.com/oceans-clip.mp4" type="video/mp4"></source>
           <source src="http://video-js.s3.amazonaws.com/oceans-clip.webm" type="video/webm"></source>
+          <source src="http://video-js.s3.amazonaws.com/oceans-clip.ogg" type="video/ogg"></source>
           <object width="640" height="264" type="application/x-shockwave-flash"
             data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf">
             <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
