--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       <h1>Video JS</h1>
       <p class="tagline">Open Source HTML5 Video Player</p>
 
-
       <div class="video-box">
         <!-- Using the Video for Everybody Embed Code (modified for VP8/WebM) http://camendesign.com/code/video_for_everybody -->
         <video id="video" class="video-js" width="640" height="264" poster="http://video-js.s3.amazonaws.com/oceans-clip.png" autobuffer>
@@ -54,7 +53,7 @@
       </div>
       <p id="video_note">Video clip is from <a href="http://disney.go.com/disneynature/oceans/" title="Oceans">Disney&rsquo;s Oceans</a></p>
 
-      <p>Video JS is a javascript-based video player that uses the HTML5 video functionality built into  advanced browsers. In general, the benefit of using and HTML5 player is a consisten look between browsers.</p>
+      <p>Video JS is a javascript-based video player that uses the HTML5 video functionality built into  advanced browsers. In general, the benefit of using an HTML5 player is a consisten look between browsers.</p>
 
       <div id="features_and_support" class="clearfix">
         <div id="features">
