--- a/index.html
+++ b/index.html
@@ -123,40 +123,6 @@
       Hosting &amp; Repository supplied by Zencoder - <a href="http://zencoder.com">Video encoding for your app</a>.
     </div>
   </div>
-<!--   <a href="http://github.com/zencoder/video-js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
-  <div id="container">
-
-    <div class="download">
-      <a href="http://github.com/zencoder/video-js/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/zencoder/video-js/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/zencoder/video-js">video-js</a>
-      <span class="small">by <a href="http://github.com/zencoder">zencoder</a></span></h1>
-
-    <div class="description">
-      Universal video embed.
-    </div>
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/zencoder/video-js/zipball/master">zip</a> or
-      <a href="http://github.com/zencoder/video-js/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/zencoder/video-js</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/zencoder/video-js">zencoder/video-js</a>
-    </div>
-
-  </div> -->
 
   <script type="text/javascript">
   //<![CDATA[
@@ -171,6 +137,20 @@
   	document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/videojs/get_num_replies.js' + query + '"></' + 'script>');
   })();
   //]]>
+  </script>
+
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-16505296-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
   </script>
 
 </body>
