I spell bad today

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <p id="video_note">Video clip is from <a href="http://disney.go.com/disneynature/oceans/" title="Oceans">Disney&rsquo;s Oceans</a></p>
 
-      <p>Video JS is a javascript-based video player that uses the HTML5 video functionality built into  advanced browsers. In general, the benefit of using an HTML5 player is a consisten look between browsers.</p>
+      <p>Video JS is a javascript-based video player that uses the HTML5 video functionality built into  advanced browsers. In general, the benefit of using an HTML5 player is a consistent look between browsers.</p>
 
       <div id="features_and_support" class="clearfix">
         <div id="features">
