Updated the VFE code. Reworked some of the listeners to be on the actual video element events. Added simple auto hiding.

--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,11 @@
   <script src="video.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" charset="utf-8">
 
+    // If using jQuery
+    // $(function(){
+    //   VideoJS.setup();
+    // })
+
     var bodyLoaded = function(){
       VideoJS.setup();
     }
@@ -18,9 +23,9 @@
   <div class="video-box">
     <!-- Using the Video for Everybody Embed Code (modified for VP8/WebM) http://camendesign.com/code/video_for_everybody -->
     <video id="video" class="video-js" width="640" height="264" poster="http://video-js.s3.amazonaws.com/oceans-clip.png" autobuffer>
-      <source src="http://video-js.s3.amazonaws.com/oceans-clip.mp4" type="video/mp4"></source>
-      <source src="http://video-js.s3.amazonaws.com/oceans-clip.webm" type="video/webm"></source>
-      <source src="http://video-js.s3.amazonaws.com/oceans-clip.ogg" type="video/ogg"></source>
+      <source src="http://video-js.s3.amazonaws.com/oceans-clip.mp4" type="video/mp4">
+      <source src="http://video-js.s3.amazonaws.com/oceans-clip.webm" type="video/webm">
+      <source src="http://video-js.s3.amazonaws.com/oceans-clip.ogg" type="video/ogg">
       <object width="640" height="264" type="application/x-shockwave-flash"
         data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf">
         <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
