Switched to load in header

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
     </style>
   <![endif]-->
 
+  <script type="text/javascript" charset="utf-8">
+    window.onload = function(){
+      VideoJS.setup();
+    }
+  </script>
+
 </head>
-<body onload="bodyLoaded()">
+<body>
 
   <div id="wrap">
     <div id="main">
@@ -45,9 +51,7 @@
         </video>
       </div>
       
-      <script type="text/javascript" charset="utf-8">
-        VideoJS.setup();
-      </script>
+
       
       <p id="video_note">Video clip is from <a href="http://disney.go.com/disneynature/oceans/" title="Oceans">Disney&rsquo;s Oceans</a></p>
 
