Added google webmaster tools meta tag.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <title>Video JS | HTML5 Video Player</title>
+  <meta name="google-site-verification" content="QHf9MEYVlEWoNHbzTeUkSQsbRT5Twzqu6N0nX1i3nes" />
+  
   <script src="video-js/video.js" type="text/javascript" charset="utf-8"></script>
   <link rel="stylesheet" href="stylesheets/base.css" type="text/css" media="all" charset="utf-8" />
   <link rel="stylesheet" href="video-js/video-js.css" type="text/css" media="all" charset="utf-8" />
