--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li>Free &amp; Open Source</li>
             <li>Lightweight. <strong>NO IMAGES USED</strong></li>
             <li>100% skinnable using CSS</li>
-            <li>Library independant</li>
+            <li>Library independent</li>
             <li>Easy to use</li>
             <li>Easy to understand &amp; extend</li>
             <li>Consistent look between browsers</li>
