Updated copyright. uploaded zencoder logo.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,6 @@
         </video>
       </div>
       
-
-      
       <p id="video_note">Video clip is from <a href="http://disney.go.com/disneynature/oceans/" title="Oceans">Disney&rsquo;s Oceans</a></p>
 
       <p>Video JS is a javascript-based video player that uses the HTML5 video functionality built into  advanced browsers. In general, the benefit of using an HTML5 player is a consistent look between browsers.</p>
@@ -124,7 +122,7 @@
     </div>
 
     <div id="footer">
-      Hosting &amp; Repository supplied by Zencoder - <a href="http://zencoder.com">Video encoding for your app</a>.
+      &copy; <a href="http://videojs.com">The Video JS Project</a>. Sponsored by <a href="http://zencoder.com">Zencoder</a>.
     </div>
   </div>
 
