--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
           </div>
         </div>
 
+        <p id="issues_link">Submit any bugs in the <a href="http://github.com/zencoder/video-js/issues">Issue Tracker</a></p>
+
         <div id="disqus_thread"></div>
         <script type="text/javascript">
           /**
