--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Video JS | HTML5 Video Player</title>
+  <title>HTML5 Video Player | Video JS</title>
   <meta name="google-site-verification" content="QHf9MEYVlEWoNHbzTeUkSQsbRT5Twzqu6N0nX1i3nes" />
   
   <script src="video-js/video.js" type="text/javascript" charset="utf-8"></script>
