Added sponsor section.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 
       <p>Video JS is a javascript-based video player that uses the HTML5 video functionality built into  advanced browsers. In general, the benefit of using an HTML5 player is a consistent look between browsers.</p>
 
+      <p id="sponsor">
+        <a href="http://zencoder.com">Video hosting &amp; encoding provided by:</a><br>
+        <a href="http://zencoder.com"><img src="images/zencoder-logo.png" border="0" alt="Zencoder - Video Encoding"></a>
+      </p>
+
       <div id="features_and_support" class="clearfix">
         <div id="features">
           <h6>Features</h6>
