--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
       <div class="video-js-box">
         <!-- Using the Video for Everybody Embed Code (modified for VP8/WebM) http://camendesign.com/code/video_for_everybody -->
-        <video id="video" class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" autobuffer>
-          <source src="http://video-js.zencoder.com/oceans-clip.mp4" type="video/mp4"></source>
-          <source src="http://video-js.zencoder.com/oceans-clip.webm" type="video/webm"></source>
-          <source src="http://video-js.zencoder.com/oceans-clip.ogg" type="video/ogg"></source>
+        <video id="video" class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" preload>
+          <source src="http://video-js.zencoder.com/oceans-clip.mp4" type="video/mp4">
+          <source src="http://video-js.zencoder.com/oceans-clip.webm" type="video/webm">
+          <source src="http://video-js.zencoder.com/oceans-clip.ogg" type="video/ogg">
           <object width="640" height="264" type="application/x-shockwave-flash"
             data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf">
             <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
