--- a/video-js/demo.html
+++ b/video-js/demo.html
@@ -22,7 +22,7 @@
 
   <div class="video-js-box">
     <!-- Using the Video for Everybody Embed Code (modified for VP8/WebM) http://camendesign.com/code/video_for_everybody -->
-    <video id="video" class="video-js" width="640" height="264" poster="http://video-js.s3.amazonaws.com/oceans-clip.png" autobuffer>
+    <video id="video" class="video-js" width="640" height="264" poster="http://video-js.s3.amazonaws.com/oceans-clip.png" preload>
       <source src="http://video-js.s3.amazonaws.com/oceans-clip.mp4" type="video/mp4">
       <source src="http://video-js.s3.amazonaws.com/oceans-clip.webm" type="video/webm">
       <source src="http://video-js.s3.amazonaws.com/oceans-clip.ogg" type="video/ogg">
