--- a/demo.html
+++ b/demo.html
@@ -35,23 +35,23 @@
   <!-- Begin VideoJS -->
   <div class="video-js-box">
     <!-- Using the Video for Everybody Embed Code http://camendesign.com/code/video_for_everybody -->
-    <video id="video" class="video-js" width="640" height="264" poster="http://video-js.s3.amazonaws.com/oceans-clip.png" preload>
-      <source src="http://video-js.s3.amazonaws.com/oceans-clip.mp4" type="video/mp4">
-      <source src="http://video-js.s3.amazonaws.com/oceans-clip.webm" type="video/webm">
-      <source src="http://video-js.s3.amazonaws.com/oceans-clip.ogg" type="video/ogg">
+    <video id="video" class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" preload>
+      <source src="http://video-js.zencoder.com/oceans-clip.mp4" type="video/mp4">
+      <source src="http://video-js.zencoder.com/oceans-clip.webm" type="video/webm">
+      <source src="http://video-js.zencoder.com/oceans-clip.ogg" type="video/ogg">
       <object width="640" height="264" type="application/x-shockwave-flash"
         data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf">
         <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
         <param name="allowfullscreen" value="true" />
-        <param name="flashvars" value='config={"clip":"http://video-js.s3.amazonaws.com/oceans-clip.mp4"}' />
-        <img src="http://video-js.s3.amazonaws.com/oceans-clip.png" width="640" height="264" alt="Poster Image" 
+        <param name="flashvars" value='config={"clip":"http://video-js.zencoder.com/oceans-clip.mp4"}' />
+        <img src="http://video-js.zencoder.com/oceans-clip.png" width="640" height="264" alt="Poster Image" 
           title="No video playback capabilities." />
       </object>
     </video>
     <p class="vjs-no-video"><strong>Download Video:</strong>
-      <a href="http://video-js.s3.amazonaws.com/oceans-clip.mp4">MP4</a>,
-      <a href="http://video-js.s3.amazonaws.com/oceans-clip.webm">WebM</a>,
-      <a href="http://video-js.s3.amazonaws.com/oceans-clip.ogg">Ogg</a><br>
+      <a href="http://video-js.zencoder.com/oceans-clip.mp4">MP4</a>,
+      <a href="http://video-js.zencoder.com/oceans-clip.webm">WebM</a>,
+      <a href="http://video-js.zencoder.com/oceans-clip.ogg">Ogg</a><br>
       <a href="http://videojs.com">HTML5 Video Player</a> by <a href="http://videojs.com">VideoJS</a>
     </p>
   </div>
