Added compatibility links.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
       <ul id="nav">
         <li><a href="http://github.com/zencoder/video-js">Source</a></li>
+        <li><a href="http://wiki.github.com/zencoder/video-js/browser-device-compatibility">Compatibility</a></li>        
         <li><a href="http://github.com/zencoder/video-js/issues">Issue Tracker</a></li>
         <li><a href="http://wiki.github.com/zencoder/video-js/">Wiki</a></li>
       </ul>
@@ -128,7 +129,7 @@
           </div>
         </div>
 
-        <p id="issues_link">Submit any bugs in the <a href="http://github.com/zencoder/video-js/issues">Issue Tracker</a></p>
+        <p id="issues_link">Submit any bugs in the <a href="http://github.com/zencoder/video-js/issues">Issue Tracker</a> or update the <a href="http://wiki.github.com/zencoder/video-js/browser-device-compatibility">Compatibility Table</a></p>
 
         <div id="disqus_thread"></div>
         <script type="text/javascript">
