--- a/demo.html
+++ b/demo.html
@@ -35,7 +35,7 @@
   <!-- Begin VideoJS -->
   <div class="video-js-box">
     <!-- Using the Video for Everybody Embed Code http://camendesign.com/code/video_for_everybody -->
-    <video id="video" class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" preload>
+    <video class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" preload>
       <source src="http://video-js.zencoder.com/oceans-clip.mp4" type="video/mp4">
       <source src="http://video-js.zencoder.com/oceans-clip.webm" type="video/webm">
       <source src="http://video-js.zencoder.com/oceans-clip.ogg" type="video/ogg">
