Created comments page.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </div>
   </div>
 
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
   //<![CDATA[
   (function() {
     var links = document.getElementsByTagName('a');
@@ -166,7 +166,7 @@
     document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/videojs/get_num_replies.js' + query + '"></' + 'script>');
   })();
   //]]>
-  </script>
+  </script> -->
 
   <script type="text/javascript">
 
