added commment link

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
         </div>
 
         <p id="issues_link">Submit any bugs in the <a href="http://github.com/zencoder/video-js/issues">Issue Tracker</a> or update the <a href="http://wiki.github.com/zencoder/video-js/browser-device-compatibility">Compatibility Table</a></p>
-
+        <p>Moved <a href="http://videojs.com/comments.html">comments</a> to another page temporarily.</p>
+        
         <!-- <div id="disqus_thread"></div> 
         <script type="text/javascript">
           /**
