--- a/video-js/demo.html
+++ b/video-js/demo.html
@@ -25,7 +25,13 @@
       VideoJS.setup();
     }
 
+    document.addEventListener("keydown", function(e){
+      // alert(e.keyCode);
+    }, false);
+
   </script>
+
+
 
   <!-- Include the VideoJS Stylesheet -->
   <link rel="stylesheet" href="video-js.css" type="text/css" media="screen" title="Video JS" charset="utf-8">
