--- a/comments.html
+++ b/comments.html
@@ -80,7 +80,7 @@
       query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
     }
     }
-    //document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/videojs/get_num_replies.js' + query + '"></' + 'script>');
+    document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/videojs/get_num_replies.js' + query + '"></' + 'script>');
   })();
   //]]>
   </script>
