--- a/video-js/demo.html
+++ b/video-js/demo.html
@@ -25,10 +25,6 @@
       VideoJS.setup();
     }
 
-    document.addEventListener("keydown", function(e){
-      // alert(e.keyCode);
-    }, false);
-
   </script>
 
 
@@ -41,10 +37,10 @@
   <!-- Begin VideoJS -->
   <div class="video-js-box">
     <!-- Using the Video for Everybody Embed Code http://camendesign.com/code/video_for_everybody -->
-    <video class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" preload>
-      <source src="http://video-js.zencoder.com/oceans-clip.mp4" type="video/mp4">
-      <source src="http://video-js.zencoder.com/oceans-clip.webm" type="video/webm">
-      <source src="http://video-js.zencoder.com/oceans-clip.ogg" type="video/ogg">
+    <video class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" controls preload>
+      <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+      <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm; codecs="vp8, vorbis"'>
+      <source src="http://video-js.zencoder.com/oceans-clip.ogg" type='video/ogg; codecs="theora, vorbis"'>
       <object width="640" height="264" type="application/x-shockwave-flash"
         data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf">
         <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
