--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
       <!-- Begin VideoJS -->
       <div class="video-js-box">
         <!-- Using the Video for Everybody Embed Code http://camendesign.com/code/video_for_everybody -->
-        <video id="video" class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" preload>
-          <source src="http://video-js.zencoder.com/oceans-clip.mp4" type="video/mp4">
-          <source src="http://video-js.zencoder.com/oceans-clip.webm" type="video/webm">
-          <source src="http://video-js.zencoder.com/oceans-clip.ogg" type="video/ogg">
-          <object width="640" height="264" type="application/x-shockwave-flash"
+        <video class="video-js" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.png" controls preload>
+          <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+          <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm; codecs="vp8, vorbis"'>
+          <source src="http://video-js.zencoder.com/oceans-clip.ogg" type='video/ogg; codecs="theora, vorbis"'>
+          <object class="vjs-flash-fallback" width="640" height="264" type="application/x-shockwave-flash"
             data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf">
             <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
             <param name="allowfullscreen" value="true" />
-            <param name="flashvars" value='config={"clip":"http://video-js.zencoder.com/oceans-clip.mp4"}' />
-            <img src="http://video-js.zencoder.com/oceans-clip.png" width="640" height="264" alt="Poster Image" 
+            <param name="flashvars" value='config={"clip":{"url":"http://video-js.zencoder.com/oceans-clip.mp4","autoPlay":false,"autoBuffering":true}}' />
+            <img src="http://video-js.zencoder.com/oceans-clip.png" width="640" height="264" alt="Poster Image"
               title="No video playback capabilities." />
           </object>
         </video>
