updated feature list

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <li>Consistent look between browsers</li>
             <li>Full Window Mode</li>
             <li>Volume Control</li>
-            <li>Fallback to <a href="http://flowplayer.org/">Flowplayer</a></li>
+            <li>Forced fallback to Flash (even when there is an unsupported source)</li>
             <li></li>
           </ul>
         </div>
